# airflow-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml
src/airflow_mcp/: client.py  server.py
tests/: test_client.py
